2007-07-13  Guillaume Cottenceau

	* src/rbart_affine.c, src/rbart_uta.c: replace RTEST uses by
	RVAL2CBOOL

2007-07-13  Guillaume Cottenceau

	* src/rbart_affine.c: "? Qtrue : QFalse" => CBOOL2RVAL cleanup

2007-07-10  Guillaume Cottenceau

	* src/rbart_canvas.c: kou says we should use NIL_P(foo) not foo ==
	Qnil

2007-01-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/libart2.rb: Added.

2006-12-22  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: check pkg-config for libpng12 too.

2005-10-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbart.[ch]: Added Art::BUILD_VERSION, ::VERSION,
	(MAJOR|MINOR|MICRO)_VERSION.

2005-10-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbart_uta.c: Added.
	* src/rbart.[ch]: Added Art::Uta.

2005-07-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbart_canvas.c: Fix compiling warnings. 

2005-06-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbart_rect.c: implemented Art::DRect and Art::IRect.

	* src/rbart_affine.c (affine_point): use TYPE instead of
	  BUILTIN_TYPE.

2005-06-07  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbart_bpath.c (bpath_initialize): Use x3 and y3 instead of
	  x1 and y1. Because Libart document says the following.

	     For the ART_MOVETO, ART_MOVETO_OPEN, and ART_LINETO path
	     codes, only the x3 and y3 fields are used.

	  http://www.levien.com/libart/bpath.html

2005-02-19  KATO Kazuyoshi  <kzys@8-p.info>

	* extconf.rb: extconf.rb don't require glib2.

2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes. Support MSVC++.
	compile to set GTK_BASEPATH as the environment variable.
	* sample/rose.rb, testlibart2.rb: Work on mswin32/mingw.

2005-01-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbart_affine.c: Works for gcc-4.0(Make artAffine as 
	global variable). Reported by Debian Bug Tracking System 
	#289710. Pointed out by Dafydd Harries.

2004-11-14 Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbart.c: Fix compiling problem under ruby-1.6.x. 
